; ModuleID = '/home/carl/AnghaBench/libgit2/tests/online/extr_clone.c_fail_certificate_check.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/online/extr_clone.c_fail_certificate_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_ECERTIFICATE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i8*, i8*)* @fail_certificate_check to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fail_certificate_check(i8* %0, i32 %1, i8* %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = call i32 @GIT_UNUSED(i8* %9)
  %11 = load i32, i32* %6, align 4
  %12 = sext i32 %11 to i64
  %13 = inttoptr i64 %12 to i8*
  %14 = call i32 @GIT_UNUSED(i8* %13)
  %15 = load i8*, i8** %7, align 8
  %16 = call i32 @GIT_UNUSED(i8* %15)
  %17 = load i8*, i8** %8, align 8
  %18 = call i32 @GIT_UNUSED(i8* %17)
  %19 = load i32, i32* @GIT_ECERTIFICATE, align 4
  ret i32 %19
}

declare dso_local i32 @GIT_UNUSED(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
